# rust-axum-postgres-api

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs  route.rs  types.rs
src/notes/: handler.rs  mod.rs  model.rs  route.rs  schema.rs
